--- a/webpack/package.json
+++ b/webpack/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "dev": "webpack-dev-server --progress --colors",
+    "build": "webpack --mode production",
+    "start": "webpack && yarn dev"
   },
   "keywords": [],
   "devDependencies": {
@@ -23,5 +24,9 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "browser-sync": "^2.26.12",
+    "browser-sync-webpack-plugin": "^2.2.2"
   }
 }
